fix scroll on mobile for banner image.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4883,7 +4883,7 @@ input, select, textarea {
 
 			#banner {
 				padding: 6em 0 3em 0 ;
-				background-attachment: scroll;
+				/* background-attachment: scroll; */
 			}
 
 		}
